# pi-forall

./: .gitignore  flake.nix  pi-forall.cabal  scripts.nix
full/src/: Arbitrary.hs  Environment.hs  Equal.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
full/test/: Main.hs
version1/src/: Arbitrary.hs  Environment.hs  Equal.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version2/src/: Arbitrary.hs  Environment.hs  Equal.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
version3/app/: Main.hs
version3/src/: Arbitrary.hs  Environment.hs  Equal.hs  Main.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
